@@ -1,5 +1,10 @@
 2009-01-22  Ankit Jain  <radical@gmail.com>
 
+	* src/WindowsPlatformService.cs (ShowMessage):
+	(AskYesNoQuestion): Use the @icon also.
+
+2009-01-22  Ankit Jain  <radical@gmail.com>
+
 	* src/RequestHandler.cs (HandlePayload): 'relativePath' can be null.
 
 2009-01-22  Ankit Jain  <radical@gmail.com>
